tests/semantic/valid/test_void_function.src
fn print_msg() -> void {
    return;
}

fn main() -> void {
    print_msg();
}